--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-      "start": "npm Start.js"
+      "scripts": {
+  "start": "node Start .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
